# mcache

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  readme.md
examples/: cache.cc  demo.h  demo.hpp  mcache.cc  mcache.h  sample.cc  simple.cc
examples/cgo/: cache.h  simple.cc  simple.cpp  simple.h
src/: arc.hpp  cache.hpp  config.hpp.in  fifo.hpp  lfu.hpp  list.hpp  lru.hpp  mcache.hpp  options.hpp  simple.hpp
